--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,6 +25,6 @@ jobs:
       run: yarn build
     
     - name: Publish build artifacts to NPM
-      run: yarn npm publish --access private --tolerate-republish
+      run: npm publish
       env:
         YARN_NPM_AUTH_TOKEN: ${{ secrets.YARN_NPM_AUTH_TOKEN }}
