--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Publish build artifacts to NPM
       run: npm publish
       env:
-        YARN_NPM_AUTH_TOKEN: ${{ secrets.YARN_NPM_AUTH_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.YARN_NPM_AUTH_TOKEN }}
