--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14.x
-        cache: 'yarn'
+        registry-url: 'https://registry.npmjs.org'
     
     - name: Install dependencies in react-components
       run: yarn install
@@ -25,6 +25,6 @@ jobs:
       run: yarn build
     
     - name: Publish build artifacts to NPM
-      run: npm publish
+      run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
