--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "src"
   ],
   "release": {
-    "branches": ["main"]
+    "branches": [
+      "main"
+    ]
   },
+  "plugins": [
+    ["@semantic-release/commit-analyzer"]
+  ],
   "engines": {
     "node": ">=10"
   },
@@ -50,6 +55,7 @@
     }
   ],
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^9.0.1",
     "@size-limit/preset-small-lib": "^7.0.3",
     "@types/react": "^17.0.36",
     "@types/react-dom": "^17.0.11",
