--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     ]
   },
   "plugins": [
-    ["@semantic-release/commit-analyzer"]
+    ["@semantic-release/commit-analyzer", {
+      "preset": "angular",
+      "releaseRules": [
+        {"type": "fix", "release": "patch"},
+        {"type": "feat", "release": "minor"},
+        {"type": "perf", "release": "major"}
+      ],
+      "parserOpts": {
+        "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
+      }
+    }]
   ],
   "engines": {
     "node": ">=10"
