--- a/package.json
+++ b/package.json
@@ -100,5 +100,9 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@department-of-veterans-affairs/formulate": "^0.0.1",
+    "formik": "^2.2.9"
   }
 }
