perf: installing eslint and eslintrc.js

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   },
   "dependencies": {
     "@department-of-veterans-affairs/formulate": "^0.0.1",
+    "eslint": "^8.20.0",
     "formik": "^2.2.9"
   }
 }
