feat(99): updating to workflow_run

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,8 +1,10 @@
 name: Yarn publish
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: [Build and Test]
+    types: [completed]
+    branches: [main]
 
 jobs:
   publish:
