--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,15 +17,9 @@ jobs:
       with:
         node-version: 14.x
         registry-url: 'https://registry.npmjs.org'
-    
-    - name: Install dependencies in react-components
-      run: yarn install
-    
-    - name: Build package NPM package
-      run: yarn build
 
     - name: Run npx semantic-release
       run: npx semantic-release
       env:
-        # NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
